@@ -7,11 +7,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.2</version>
+        <version>2.7.3</version>
     </parent>
+
     <groupId>no.nav.sak</groupId>
     <artifactId>sak</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <modules>
         <module>core</module>
@@ -20,8 +22,6 @@
 
     <properties>
         <java.version>17</java.version>
-        <maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
-        <dependency-check-maven.version>6.0.5</dependency-check-maven.version>
 
         <oppgavehandtering-security.version>4.01.16</oppgavehandtering-security.version>
         <oppgavehandtering-resilience.version>1.00.08</oppgavehandtering-resilience.version>
@@ -31,28 +31,32 @@
         <logstash.encoder.version>7.2</logstash.encoder.version>
 
         <jaxb.version>3.0.2</jaxb.version>
-        <commons.configuration.version>2.7</commons.configuration.version>
+        <commons.configuration.version>2.8.0</commons.configuration.version>
         <commons.beanutils.version>1.9.4</commons.beanutils.version>
-        <nimbusds.version>9.27</nimbusds.version>
-        <swagger.version>2.1.13</swagger.version>
-        <swagger-ui.version>4.5.2</swagger-ui.version>
-        <swagger.jersey2.version>2.2.1</swagger.jersey2.version>
-        <ehcache.version>3.9.9</ehcache.version>
-        <junit.platform.version>1.3.2</junit.platform.version>
-        <javax-validation.version>2.0.1.Final</javax-validation.version>
-        <javax-activation.version>1.2.0</javax-activation.version>
-        <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
-        <javax.servlet.version>4.0.1</javax.servlet.version>
-        <javax.xml.bind.version>2.3.1</javax.xml.bind.version>
-        <jersey.version>2.36</jersey.version>
-        <gson.version>2.9.0</gson.version>
-        <ojdbc.version>21.5.0.0</ojdbc.version>
-    </properties>
+        <nimbusds.version>9.43.1</nimbusds.version>
 
-    <packaging>pom</packaging>
+        <swagger.version>2.2.2</swagger.version>
+        <swagger-ui.version>4.14.0</swagger-ui.version>
+        <springdoc-openapi-ui.version>1.6.11</springdoc-openapi-ui.version>
+
+        <ehcache.version>3.10.1</ehcache.version>
+        <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
+        <javax.xml.bind.version>2.3.1</javax.xml.bind.version>
+        <jersey.version>2.37</jersey.version>
+        <gson.version>2.9.1</gson.version>
+        <ojdbc.version>21.7.0.0</ojdbc.version>
+
+        <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${springdoc-openapi-ui.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.glassfish.jersey</groupId>
                 <artifactId>jersey-bom</artifactId>
@@ -75,6 +79,7 @@
                 <artifactId>ojdbc11</artifactId>
                 <version>${ojdbc.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>no.nav.oppgavehandtering</groupId>
                 <artifactId>oppgavehandtering-security</artifactId>
@@ -90,6 +95,7 @@
                 <artifactId>oppgavehandtering-resilience</artifactId>
                 <version>${oppgavehandtering-resilience.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>net.logstash.logback</groupId>
                 <artifactId>logstash-logback-encoder</artifactId>
@@ -171,151 +177,15 @@
                 <artifactId>javax.ws.rs-api</artifactId>
                 <version>${javax.ws.rs-api.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-ui</artifactId>
-                <version>1.2.18</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
-
-    <profiles>
-        <profile>
-            <id>mutation-tests</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.pitest</groupId>
-                        <artifactId>pitest-maven</artifactId>
-                        <version>${pitest-maven.version}</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.pitest</groupId>
-                                <artifactId>pitest-junit5-plugin</artifactId>
-                                <version>${pitest-junit5-plugin.version}</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>mutationCoverage</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <coverageThreshold>70</coverageThreshold>
-                            <excludedTestClasses>
-                                no.nav.sak.SakResourceIntegrationTest,no.nav.sak.server.StartJettyTest
-                            </excludedTestClasses>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>integration-tests</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>integration-tests</id>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration combine.self="override">
-                            <includes>
-                                <include>**/*Verification.java</include>
-                            </includes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>net.alchim31.maven</groupId>
-                    <artifactId>scala-maven-plugin</artifactId>
-                    <version>${scala.maven.version}</version>
-                    <executions>
-                        <execution>
-                            <id>scala-compile-first</id>
-                            <phase>process-resources</phase>
-                            <goals>
-                                <goal>add-source</goal>
-                                <goal>compile</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>scala-test-compile</id>
-                            <phase>process-test-resources</phase>
-                            <goals>
-                                <goal>testCompile</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.junit.platform</groupId>
-                            <artifactId>junit-platform-surefire-provider</artifactId>
-                            <version>${junit.platform.version}</version>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <argLine>
-                            --add-opens java.base/java.lang=ALL-UNNAMED
-                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
-                        </argLine>
-                        <properties>
-                            <excludedGroups>integration-test</excludedGroups>
-                        </properties>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>io.gatling</groupId>
-                    <artifactId>gatling-maven-plugin</artifactId>
-                    <version>${gatling-maven-plugin.version}</version>
-                    <configuration>
-                        <failOnError>true</failOnError>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>${dependency-check-maven.version}</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-enforcer-plugin</artifactId>-->
-<!--                <version>${maven-enforcer-plugin.version}</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>enforce-versions</id>-->
-<!--                        <goals>-->
-<!--                            <goal>enforce</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <rules>-->
-<!--                                <dependencyConvergence/>-->
-<!--                            </rules>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-toolchains-plugin</artifactId>
@@ -330,7 +200,7 @@
                 <configuration>
                     <toolchains>
                         <jdk>
-                            <version>17</version>
+                            <version>${java.version}</version>
                             <vendor>openjdk</vendor>
                         </jdk>
                     </toolchains>
